UGC-19179: fix issue when there is more than 2 product and last product get cut off

--- a/widgets/styles/templates/products.scss
+++ b/widgets/styles/templates/products.scss
@@ -80,7 +80,7 @@
     }
 
     .swiper-expanded-product-recs {
-      width: calc(90% - 40px);
+      width: calc(90% - 20px);
 
       .swiper-wrapper {
         width: calc(100% - 20px);
